# opengl-physics

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
include/: callbacks.h  constants.h  point.h
include/input/: keyboard_input.h  mouse_input.h
include/objects/: triangle.h
include/physics/: collision.h  light_ray.h
src/: callbacks.c  main.c  main.cpp
src/input/: keyboard_input.c  mouse_input.c
